# amquery

./: .gitignore  LICENSE.txt  README.md  example.py  misal-cli.py  setup.py
PlosONE/: amquery.tex  refs.bib  time_convert.py
amquery/: __init__.py  amq.py  api.py  cli.py  test.py
amquery/cli/: __init__.py  _amq.py  _amq_test.py  _cli.py  amq.py
amquery/core/: __init__.py  index.py  refindex.py  sample.py  sample_map.py
amquery/index/: __init__.py  _index.py
amquery/lib/: config.py  coord_system.py  distance.py  index.py  iof.py  metrics.py  multiprocess.py  ui.py
amquery/tools/: format_check.py  split_fasta.py
amquery/utils/: __init__.py  config.py  filter.py  format_check.py  merge_fasta.py  multiprocess.py  split_fasta.py  ui.py
api/core/: __init__.py  index.py  sample.py  sample_map.py
api/utils/: multiprocess.py
cli/: cli.py
data/: amq-test.sh  bench.sh  copy.sh  mem_convert.py  merge.sh  plots.R  plots.sh  run.sh  split.sh  time_convert.py
misal/: client.py  database.py  proto.py  protocol.py  server.py
scripts/: __init__.py  merge_fasta.py  split_fasta.py
src/: 1.R  amq.py  config.py  create_map.py  distance.py  dm.R  generate.py  iof.py  jaccard.py  jackknife.R  main.R  main.py  metrics.py  mgns.py  minhash.py  nns  parse.py  requirements.txt  run.sh  run_genetic.py  run_unifrac.sh  setup.py  subsample.py  subsample_all.py  subsampling.py  test.py  testing.py  tmp.py  unifrac.sh  vptree.py
src/cpp/: CMakeLists.txt  cache.h  test.cpp  thread_pool.h
src/lib/: dist.py  (+17 more)
testfiles/: db.config
tests/: test_integration.py  test_vptree.py
(+182 files in other folders)
